# geodata_reader

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_web.sh  check.sh  geodata_reader.js  geodata_reader_bg.wasm  index.html  init.js  start_server.sh  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
docs/: CNAME  geodata_reader.js  geodata_reader_bg.wasm  index.html
luci/: acl.json  menu.json  view.js
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/geodata/: mod.rs
