[package]
name = "geodata_reader"
version = "0.1.0"
authors = ["yichya <mail@yichya.dev>"]
edition = "2021"
rust-version = "1.79"

[dependencies]
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.27"
ehttp = "0.5.0"
ipnet = "2"
prost = "0.12"

[build-dependencies]
prost-build = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
